[tool.poetry]
name = "spectra_tools"
version = "0.1.0"
description = ""
authors = ["Steven Bennett <s.bennett18@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
